--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,95 @@
 .App {
-  text-align: center;
-}
+  width: 1290px;
+  margin: auto;
+  background-color: burlywood;
+ }
+ 
+ .App-logo {
+   height: 10vmin;
+   pointer-events: none;
+ }
+ 
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+ 
+ .NavBar {
+   padding: 2rem;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+ 
+ }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ .Reviewsform {
+  box-sizing: border-box;
+  width: 50%;
+  padding: 0px;
+  margin: 0px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  
+ }
+ .btn {
+  display: block;
+  width: 10%;
+  font-size: 1.2rem;
+  margin: 8px 0;
+  padding: 10px 0;
+  background-color: #333;
   color: white;
-}
+  border: 1px solid #333;
+  border-radius: 8px;
+  cursor: pointer;
 
-.App-link {
-  color: #61dafb;
 }
+.Image{
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
+  width: 50%;
+  height: 50%;
+  
+}
+.Imageinfo {
+  padding: 50px 100px;
+ 
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.buybtn {
+  background-color: #333;
+  color: white;
+  border: 1px solid #333;
+  border-radius: 8px;
+  cursor: pointer;
+  
+}
+.cartbtn {
+  display: block;
+  width: 10%;
+  font-size: 1.2rem;
+  margin: 8px 0;
+  padding: 10px 0;
+  background-color: #333;
+  color: white;
+  border: 1px solid #333;
+  border-radius: 8px;
+  cursor: pointer;
+  align-items: flex-end;
+}
+.pic {
+  width: 100%;
+  height: auto;
+}
+.removebtn {
+  display: block;
+  width: auto;
+  font-size: 1.2rem;
+  margin: 8px 0;
+  padding: 10px 0;
+  background-color: #333;
+  color: white;
+  border: 1px solid #333;
+  border-radius: 8px;
+  cursor: pointer;
+  height: 10%;
 }
